<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- completed: Add necessary string values -->
    <string name="upcoming_election">Upcoming elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved elections</string>

    <string name="vote_image_description">Ballot Image</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="location_required_error">Location services must be enabled to use my location button</string>
    <string name="request_error">Url services not available</string>
    <string name="fill_all_fields">All the fields need to be filled</string>
    <string name="settings">Settings</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="city">City</string>
    <string name="alabama">Alabama</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My representatives</string>
    <string name="tools_vip_test_election">VIP Test Election</string>
    <string name="tools_date_election">Mon Feb 05 00:00:00 EDT 2022</string>
    <string name="representatives_picture_description">Representatives picture</string>
    <string name="representative_search">Representative Search</string>
</resources>
